@@ -839,6 +839,22 @@ if test "$HAVE_STRIPCHOP" = "yes" \
 fi
 
 dnl ---------------------------------------------------------------------------
+dnl Should we try to defer loading of strip/tile offsets and sizes to 
+dnl optimize directory scanning?  These is an experimental feature for 
+dnl libtiff 4.0.
+dnl ---------------------------------------------------------------------------
+
+AC_ARG_ENABLE(defer-strile-load,
+	      AS_HELP_STRING([--enable-defer-strile-load],
+			     [enable deferred strip/tile offset/size loading (experimental)]),
+	      [HAVE_DEFER_STRILE_LOAD=$enableval], [HAVE_DEFER_STRILE_LOAD=no])
+
+if test "$HAVE_DEFER_STRILE_LOAD" = "yes" ; then
+  AC_DEFINE(DEFER_STRILE_LOAD,1,[enable deferred strip/tile offset/size loading (experimental)])
+
+fi
+
+dnl ---------------------------------------------------------------------------
 dnl Default subifd support.
 dnl ---------------------------------------------------------------------------
 AC_DEFINE(SUBIFD_SUPPORT,1,[Enable SubIFD tag (330) support])
